# CadastroDeFornecedorSAP

./: .gitignore  config_logging.py  main.py  pyproject.toml  test_json.py  teste.py  utils.py  validadores.py
Arquivos/: fornecedor_anexos.json  fornecedor_bruto.json  fornecedor_limpo.json
Extrator/: GerenciadorAnexos.py  LimparJson.py  PDFExtractor.py  PadronizadorInscricaoEstadual.py  PadronizarDados.py
PDFs/: Templete.xls
SAP/: AutomacaoSAP.py  ConexaoSAP.py  EntrarTransacao.py  GerenciadorAnexos.py  ManipuladorCampos.py  PreencherCompras.py  PreencherDadosBancarios.py  PreencherDadosGerais.py  PreencherEmpresas.py  SalvarFornecedor.py  __init__.py  campos_sap.json
layout/: TelaAnexos.py  TelaInformacoes.py  TelaInicial.py
